--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,10 +23,8 @@
             </label>
 
             <div class="trigger">
-              <a class="page-link" href="{{ }}">current</a><br />
-              <span class="linkdesc">digital insanity<br /></span>
-              {% for path in page_paths %}
-                {% assign my_page = site.pages | where: "path", path | first %}
+              {% assign sorted_pages = site.pages | sort: "order" %}
+              {% for my_page in sorted_pages %}
                 {% if my_page.title %}
                 <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a><br />
                 {% if my_page.subtitle %}
