--- a/_sass/asylum/_basefont.scss
+++ b/_sass/asylum/_basefont.scss
@@ -15,25 +15,25 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 28px;
-    line-height: 28px;
+    font-size: $base-font-size * 2.3;
+    line-height: $base-font-size * 2.3;
     font-weight: normal;
 }
 
 h2 {
-    font-size: 16px;
+    font-size: $base-font-size * 1.3;
     font-weight: normal;
 }
 
 h3 {
-    font-size: 14px;
+    font-size: $base-font-size * 1.16;
     font-weight: bold;
     padding: 10px 0 0 0;
 }
 
 h4 {
-    font-size: 12px;
-    line-height: 12px;
+    font-size: $base-font-size;
+    line-height: $base-font-size;
     font-weight: bold;
     text-decoration: underline;
     padding: 18px 0 0 0;
@@ -41,7 +41,7 @@ h4 {
 }
 
 h5 {
-    font-size: 12px;
+    font-size: $base-font-size;
     font-weight: normal;
     font-style: italic;
 }
@@ -69,24 +69,24 @@ a {
 }
 
 .copyright {
-    font-size: 10px;
-    line-height: 12px;
+    font-size: $small-font-size;
+    line-height: $base-font-size;
 }
 
 .errata, .gbsign {
     font-style: italic;
-    line-height: 12px;
+    line-height: $base-font-size;
 }
 
 .bk2top {
-    font-size: 11px;
+    font-size: $small-font-size;
     text-align: right;
     margin: 32px 0px 15px 0px;
 }
 
 .note, .caption {
-    font-size: 10px;
-    line-height: 11px;
+    font-size: $small-font-size;
+    line-height: $small-font-size;
 }
 
 .compliance {
