--- a/_sass/asylum/_layout.scss
+++ b/_sass/asylum/_layout.scss
@@ -23,7 +23,7 @@ a {
 
 header {
     h1 {
-        line-height: 22px;
+        line-height: $base-font-size * 2;
         padding-bottom: 4px;
         text-transform: lowercase;
     }
@@ -100,8 +100,8 @@ footer.footer {
     }
 
     .page-link {
-        font-size: 10px;
-        line-height: 10px;
+        font-size: $small-font-size;
+        line-height: $small-font-size;
     }
 
     .linkdesc {
