Stretch main text body to extend dividing bar
This makes the page look cleaner, as the dividing bar/border will now
extend cleanly past the link list.

--- a/_sass/asylum/_layout.scss
+++ b/_sass/asylum/_layout.scss
@@ -64,9 +64,9 @@ body {
 }
 
 @media (min-width: $on-laptop) {
-    main.text
-    {
-        float: right;        /* Neil */
+    main.text {
+        min-height: 750px;
+        float: right;
 	text-align: left;
 	left: 0;
 	padding: 0 0 0 1em;
