--- a/_sass/asylum/_layout.scss
+++ b/_sass/asylum/_layout.scss
@@ -174,6 +174,30 @@ ins {
     font-style: none;
 }
 
+.post-list {
+    margin-left: 0;
+    padding: 0;
+    list-style: none;
+
+    > li {
+        margin-bottom: $spacing-unit / 3;
+        &:not(:last-child) {
+            border-bottom: 1px dashed $grey-color;
+        }
+    }
+
+}
+
+.post-meta {
+    font-size: $small-font-size;
+    color: $grey-color;
+}
+
+.post-link {
+    display: block;
+    @include relative-font-size(1.5);
+}
+
 .social-media-list {
   li + li {
     padding-top: 5px;
