Add a link to the previous post in the post layout
This is particularly helpful for new readers, to find the previous
post after reading the current one, and to continue reading the
back-catalog of posts.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,3 +3,7 @@ layout: default
 ---
 
 {{ content }}
+
+{% if page.previous %}
+<p class="previous-post-link">Previously: <a href="{{ page.previous.url | relative_url }}">{{ page.previous.title }}</a></p>
+{% endif %}
