--- a/_sass/asylum/_layout.scss
+++ b/_sass/asylum/_layout.scss
@@ -174,6 +174,20 @@ ins {
     font-style: none;
 }
 
+.bottom-link {
+    float: right;
+    text-align: right;
+    margin: 32px 0px 15px 0px;
+    @extend .note;
+}
+
+.previous-post-link {
+    @extend .bottom-link
+}
+.rss-subscribe {
+    @extend .bottom-link
+}
+
 .post-list {
     margin-left: 0;
     padding: 0;
