--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
           <h1>{{ page.title }}</h1>
           <h2>{% if page.subtitle %}{{ page.subtitle }}{% else if page.date %}
             <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-              {% assign date_format = site.asylum.date_format | default: "%b %-d, %Y" %}
+              {% assign date_format = site.asylum.date_format | default: "%B %-d, %Y" %}
               {{ page.date | date: date_format }}
             </time>{% endif %}
           </h2>
