--- a/_includes/post-list-entry.html
+++ b/_includes/post-list-entry.html
@@ -1,5 +1,5 @@
         <li>
-          {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+          {% assign date_format = site.asylum.date_format | default: "%B %-d, %Y" %}
           <div>
             <div class="post-meta">{{ post.date | date: date_format }}</div>
             <h3>
