Exclude pages who don't declare an order from the link list

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,12 +25,15 @@
             <div class="trigger">
               {% assign sorted_pages = site.pages | sort: "order" %}
               {% for my_page in sorted_pages %}
+                {% if my_page.order %}
                 {% if my_page.title %}
                 <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a><br />
                 {% if my_page.subtitle %}
                 <span class="linkdesc">{{ my_page.subtitle | escape | lower }}<br /></span>
                 {% else %}
                 <span class="linkdesc">&mdash;<br /></span>
+                {% endif %}
+
                 {% endif %}
                 {% endif %}
               {% endfor %}
