--- a/_sass/asylum/_layout.scss
+++ b/_sass/asylum/_layout.scss
@@ -69,7 +69,7 @@ body {
         float: right;
 	text-align: left;
 	left: 0;
-	padding: 0 0 0 1em;
+	padding: 0;
 	border-left: 1px solid #999;
 	width: 65%;
 	voice-family: "\"}\"";
